<resources>
    <string name="app_name">Eletric Car</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="enviar">Enviar</string>
    <string name="meu_t_tulo">Meu título</string>
    <string name="preco">Preço</string>
    <string name="favoritos">Favoritos</string>
    <string name="bateria">bateria</string>
    <string name="potencia">potencia</string>
    <string name="recarga">recarga</string>
    <string name="preco_kwh">Preço kwh</string>
    <string name="km_percorrido">KM percorrido</string>
    <string name="calcular">Calcular</string>
    <string name="segunda_tela">Segunda tela</string>
    <string name="calcular_preco">Calcular preço</string>
    <string name="calcular_autonomia">CALCULAR AUTONOMIA</string>
    <string name="carros">Carros</string>
    <string name="carros_eletricos">Carros Elétricos</string>
</resources>