<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carros_eletricos"
        android:textStyle="bold"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tv_carros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/carros"
        android:layout_margin="16dp"
        android:textStyle="bold"

        app:layout_constraintTop_toBottomOf="@id/tv_titulo"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tv_favoritos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/favoritos"
        android:textStyle="bold"

        app:layout_constraintStart_toEndOf="@id/tv_carros"
        app:layout_constraintTop_toTopOf="@id/tv_carros"
        />
    <androidx.cardview.widget.CardView
        android:id="@+id/cv_carros"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        app:cardCornerRadius="26dp"
        android:elevation="24dp"
        app:layout_constraintTop_toBottomOf="@id/tv_carros"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_carros"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            >

            <ImageView
                android:id="@+id/iv_image"
                android:layout_width="0dp"
                android:layout_height="118dp"
                android:layout_marginTop="16dp"
                android:paddingBottom="16dp"
                android:src="@drawable/lucid_air"

                app:layout_constraintStart_toStartOf="parent"
                />

            <TextView
                android:id="@+id/tv_preco"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/preco"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_image" />

            <TextView
                android:id="@+id/tv_preco_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="R$ 300.000,00"

                app:layout_constraintStart_toEndOf="@+id/tv_preco"
                app:layout_constraintTop_toBottomOf="@id/iv_image" />

            <TextView
                android:id="@+id/tv_bateria"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/bateria"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_preco" />

            <TextView
                android:id="@+id/tv_bateria_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="R$ 300.000,00"

                app:layout_constraintStart_toEndOf="@+id/tv_bateria"
                app:layout_constraintTop_toTopOf="@id/tv_bateria" />

            <TextView
                android:id="@+id/tv_potencia"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/potencia"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_bateria" />

            <TextView
                android:id="@+id/tv_potencia_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="R$ 300.000,00"

                app:layout_constraintStart_toEndOf="@+id/tv_potencia"
                app:layout_constraintTop_toTopOf="@id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga"
                style="@style/TextAppearance.AppCompat.Body2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:text="@string/recarga"

                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_potencia" />

            <TextView
                android:id="@+id/tv_recarga_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="R$ 300.000,00"

                app:layout_constraintStart_toEndOf="@+id/tv_recarga"
                app:layout_constraintTop_toTopOf="@id/tv_recarga" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
    <Button
        android:id="@+id/btn_puxar_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular_preco"

        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>