<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/iv_close_calc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?actionBarItemBackground"

        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toTopOf="@id/tv_calcular_autonomia"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_calcular_autonomia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular_autonomia"
        android:layout_margin="16dp"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_close_calc"
        />

    <EditText
        android:id="@+id/et_preco_kwh"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:hint="@string/preco_kwh"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_calcular_autonomia"
        android:autofillHints="Preco"
        />

    <EditText
        android:id="@+id/et_km_percorrido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="5"
        android:layout_marginTop="16dp"

        app:layout_constraintTop_toBottomOf="@id/et_preco_kwh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btn_calcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:layout_marginTop="4dp"

        app:layout_constraintTop_toBottomOf="@id/et_km_percorrido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/ed_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        style="@style/TextAppearance.AppCompat.Body2"
        android:layout_margin="16dp"


        app:layout_constraintTop_toBottomOf="@id/btn_calcular"
        app:layout_constraintStart_toStartOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>