<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_carros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="16dp"
            app:cardCornerRadius="26dp"
            android:elevation="24dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_carros"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp"
                >

                <ImageView
                    android:id="@+id/iv_image"
                    android:layout_width="0dp"
                    android:layout_height="118dp"
                    android:paddingBottom="16dp"
                    android:src="@drawable/lucid_air"

                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/tv_preco"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/preco"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/iv_image"
                    />

                <TextView
                    android:id="@+id/tv_preco_value"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="R$ 300.000,00"

                    app:layout_constraintStart_toEndOf="@+id/tv_preco"
                    app:layout_constraintTop_toBottomOf="@id/iv_image" />

                <TextView
                    android:id="@+id/tv_bateria"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/bateria"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_preco" />

                <TextView
                    android:id="@+id/tv_bateria_value"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="R$ 300.000,00"

                    app:layout_constraintStart_toEndOf="@+id/tv_bateria"
                    app:layout_constraintTop_toTopOf="@id/tv_bateria" />

                <TextView
                    android:id="@+id/tv_potencia"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/potencia"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_bateria" />

                <TextView
                    android:id="@+id/tv_potencia_value"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="R$ 300.000,00"

                    app:layout_constraintStart_toEndOf="@+id/tv_potencia"
                    app:layout_constraintTop_toTopOf="@id/tv_potencia" />

                <TextView
                    android:id="@+id/tv_recarga"
                    style="@style/TextAppearance.AppCompat.Body2"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/recarga"

                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_potencia" />

                <TextView
                    android:id="@+id/tv_recarga_value"
                    style="@style/TextAppearance.AppCompat.Body1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="R$ 300.000,00"

                    app:layout_constraintStart_toEndOf="@+id/tv_recarga"
                    app:layout_constraintTop_toTopOf="@id/tv_recarga" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>